kubernetes/apps/finance/firefly-iii/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefly-iii
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Firefly III"
    gethomepage.dev/description: "Personal finance manager"
    gethomepage.dev/group: "Finance"
    gethomepage.dev/icon: "mdi-cash-multiple"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "firefly.${DOMAIN_CLUSTER}"
  rules:
    - backendRefs:
        - name: firefly-iii
          port: 8080
